# Spatial_Data_Mining_Winter2025

./: .readthedocs.yaml  README.md  setup.cfg
source/: conf.py  index.rst  rtd_requirements.txt
source/notebooks/L1/: vs_code.ipynb
source/notebooks/L3/: association_rules.ipynb  association_rules_new.ipynb  geopandas.ipynb
source/tutorials/L1/: assignment-1.rst  prepration.rst  python_installation.rst  vs_code.rst
source/tutorials/L2/: tasks.rst
source/tutorials/L3/: tasks.rst
source/tutorials/L4/: tasks.rst
source/tutorials/L5/: tasks.rst
source/tutorials/L6/: tasks.rst
